# community-intern

./: .gitignore  README.md  pyproject.toml  requirements.txt
.cursor/rules/: bug-fix.mdc  clean-comment.mdc  do-not-explain.mdc  docs-are-spec.mdc  error-handling.mdc  no-parenthetical-explanation.mdc
docs/: architecture.md  configuration.md  logging.md  module-ai-response.md  module-bot-integration.md  module-knowledge-base-cache.md  module-knowledge-base.md  module-team-knowledge-capture.md
examples/: config.yaml  kb_index.json  kb_index.txt  smoke_config_logging.py
src/community_intern/: __init__.py  __main__.py
src/community_intern/adapters/: __init__.py
src/community_intern/ai/: __init__.py  graph.py  impl.py  interfaces.py  mock.py  types.py
src/community_intern/ai_response/: __init__.py  config.py  graph.py  impl.py  mock.py  types.py
src/community_intern/config/: __init__.py  loader.py  models.py
src/community_intern/core/: __init__.py  models.py
src/community_intern/kb/: __init__.py  cache_manager.py  impl.py  interfaces.py  web_fetcher.py
src/community_intern/knowledge_cache/: indexer.py
src/community_intern/llm/: __init__.py  image_adapters.py  image_transport.py  image_utils.py  invoker.py  models.py  prompts.py  settings.py
src/community_intern/logging/: __init__.py
src/community_intern/team_kb/: capture_handler.py  models.py  raw_archive.py  team_kb_manager.py  topic_storage.py
src/discord_intern/: __init__.py  __main__.py
src/discord_intern/adapters/: __init__.py
src/discord_intern/ai/: mock.py  (+3 more)
tests/: test_image_adapters.py
(+21 files in other folders)
