[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "community-intern"
version = "0.1.0"
description = "LLM powered Discord FAQ assistant"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "lukew" }]
dependencies = [
  "discord.py==2.6.4",
  "langgraph==1.0.5",
  "pydantic==2.12.5",
  "PyYAML==6.0.2",
  "python-dotenv==1.0.1",
  "beautifulsoup4==4.12.3",
  "playwright==1.57.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
